add it consulting page

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,26 +4,26 @@
     "it_consulting": "IT Consulting",
     "web_development": "Web Development",
     "it_services": "IT Services",
-    "contact_us": "Contact Us"
+    "contact_us": "Contact"
   },
   "footer_copyright": "All rights reserved.",
- "home": {
+  "home": {
     "title": "Transforming Ideas into Digital Reality",
-    "subtitle": "Your Vision, Our Mission",
-    "vision_content": "At Cyborg, we turn your IT aspirations into success stories. By seamlessly blending business acumen with cutting-edge technology, we empower your growth and elevate your projects to new heights.",
+    "subtitle": "Your Vision is Our Mission",
+    "vision_content": "At Cyborg, we transform your IT visions into success stories. By perfectly combining business acumen with cutting-edge technology, we fuel your growth and elevate your projects to the next level.",
     "wish_title": "Ready to Make Your IT Wish Come True?",
-    "wish_content": "Tell us your IT desires, and we'll bring them to life with precision and excellence. Let's embark on a journey where your vision meets our expertise.",
+    "wish_content": "Share your IT wishes with us, and we will realize them with precision and excellence. Let's embark on a journey where your vision meets our expertise.",
     "services_title": "Our Services",
     "service_it_consulting_title": "IT Consulting",
-    "service_it_consulting_description": "Providing strategic IT solutions to drive your business forward.",
+    "service_it_consulting_description": "Strategic IT solutions to drive your business.",
     "service_web_development_title": "Web Development",
-    "service_web_development_description": "Crafting responsive and engaging websites tailored to your needs.",
+    "service_web_development_description": "Creating responsive and engaging websites tailored to your needs.",
     "service_it_services_title": "IT Services",
     "service_it_services_description": "Comprehensive IT support and management for seamless operations.",
     "projects_title": "Our Projects",
     "project_one_title": "Project One",
     "project_one_description": "A brief description of Project One.",
-    "contact_title": "Get in Touch",
+    "contact_title": "Contact Us",
     "contact_name_placeholder": "Your Name",
     "contact_email_placeholder": "Your Email",
     "contact_message_placeholder": "Your Message",
@@ -33,25 +33,24 @@
     "faq_answer_1": "We offer IT consulting, web development, and IT services.",
     "faq_question_2": "How can I contact you?",
     "faq_answer_2": "You can use the contact form on this page or email us directly.",
-    "faq_question_3": "Do you provide custom solutions?",
-    "faq_answer_3": "Yes, we tailor our services to meet your specific needs.",
+    "faq_question_3": "Do you offer custom solutions?",
+    "faq_answer_3": "Yes, we tailor our services to your specific needs.",
     "project_1_title": "Project One",
-    "project_1_description": "Description for project one.",
+    "project_1_description": "Description for Project One.",
     "project_2_title": "Project Two",
-    "project_2_description": "Description for project two.",
+    "project_2_description": "Description for Project Two.",
     "project_3_title": "Project Three",
-    "project_3_description": "Description for project three.",
-    "project_view_more": "View More"
+    "project_3_description": "Description for Project Three.",
+    "project_view_more": "Learn More"
   },
-
   "it_consulting": {
     "it_consulting": "IT Consulting",
     "from_idea_to_implementation": "From Idea to Implementation",
-    "content_for_from_idea_to_implementation": "This section explains how we take ideas to implementation.",
+    "content_for_from_idea_to_implementation": "This section explains how we turn ideas into reality.",
     "it_strategy": "IT Strategy & Digitalization",
     "content_for_it_strategy": "We help businesses align their IT strategy with business goals.",
     "software_consulting": "Software Consulting",
-    "content_for_software_consulting": "Our software consulting services provide tailored solutions.",
+    "content_for_software_consulting": "Our software consulting provides tailored solutions.",
     "it_security": "IT Security & Audits",
     "content_for_it_security": "We conduct audits and implement robust IT security systems."
   },
@@ -60,11 +59,11 @@
     "wordpress": "WordPress Development",
     "content_for_wordpress": "We create custom WordPress websites.",
     "react_applications": "React Applications",
-    "content_for_react_applications": "We build dynamic React applications.",
+    "content_for_react_applications": "We develop dynamic React applications.",
     "angular_development": "Angular Development",
-    "content_for_angular_development": "Our team develops robust Angular applications.",
+    "content_for_angular_development": "Our team builds robust Angular applications.",
     "e_commerce": "E-Commerce Solutions",
-    "content_for_e_commerce": "We provide complete e-commerce solutions.",
+    "content_for_e_commerce": "We offer comprehensive e-commerce solutions.",
     "custom_software": "Custom Software Solutions",
     "content_for_custom_software": "We develop software tailored to your needs.",
     "technologies_tools": "Technologies & Tools",
@@ -72,32 +71,17 @@
   },
   "it_services": {
     "full_service_it": "Full-Service IT",
-    "content_for_full_service_it": "We offer comprehensive IT services.",
+    "content_for_full_service_it": "We provide comprehensive IT services.",
     "server_management": "Server Management",
     "content_for_server_management": "We manage and maintain your servers.",
     "cloud_backup": "Cloud Solutions & Backup",
     "content_for_cloud_backup": "Secure cloud solutions and backup services.",
     "user_support": "User Support",
-    "content_for_user_support": "We provide support for your users."
+    "content_for_user_support": "We support your users."
   },
   "about_us": {
-    "hero_title": "Empowering Your Business Through Innovation",
-    "intro_title": "What Sets Us Apart",
-    "intro_text": "Our unwavering dedication to understanding each client's unique needs. We delve deep into the core of your operations to deliver tailored solutions that drive success.",
-    "about_title": "About Us",
-    "about_text": "We are a forward-thinking IT company committed to providing high-quality services at competitive prices. Our fresh perspective allows us to innovate and adapt swiftly to the ever-changing technological landscape.",
-    "mission_title": "Our Mission",
-    "mission_text": "To bridge the gap between technology and business, offering solutions that empower companies to reach new heights.",
-    "faq_title": "Frequently Asked Questions",
-    "faq_question_1": "How can we start a project with you?",
-    "faq_answer_1": "Simply reach out to us via email or phone, and we'll schedule an initial consultation to discuss your needs.",
-    "faq_question_2": "What industries do you specialize in?",
-    "faq_answer_2": "We work across various industries, including finance, healthcare, retail, and more, tailoring solutions to each sector's unique challenges.",
-    "faq_question_3": "Do you offer support after project completion?",
-    "faq_answer_3": "Yes, we provide ongoing support and maintenance to ensure your solutions continue to perform optimally."
-  },
-  "about_us": {
-    "hero_title": "Empowering Your Business Through Innovation",
+    "hero_title": "Welcome to Cyborg",
+    "hero_subtitle": "Innovative IT Solutions Tailored for You",
     "about_title": "About Us",
     "about_text": "Our unwavering dedication to understanding each client's unique needs allows us to deliver tailored solutions that drive success.",
     "mission_title": "Our Mission",
@@ -108,7 +92,35 @@
     "faq_question_2": "What industries do you specialize in?",
     "faq_answer_2": "We work across various industries, tailoring solutions to each sector's unique challenges.",
     "faq_question_3": "Do you offer support after project completion?",
-    "faq_answer_3": "Yes, we provide ongoing support and maintenance to ensure your solutions continue to perform optimally."
+    "faq_answer_3": "Yes, we provide ongoing support and maintenance to ensure your solutions continue to perform optimally.",
+    "who_we_are_title": "Who We Are",
+    "who_we_are_content": "At Cyborg, we are a forward-thinking startup dedicated to delivering cutting-edge IT solutions. Our fresh entry into the industry equips us with innovative ideas and an unbounded passion for technology. We believe that our newness allows us to offer unique perspectives, agile solutions, and personalized attention that established companies might overlook.",
+    "our_mission_title": "Our Mission",
+    "our_mission_content": "Our mission is to bridge the gap between affordability and quality in the IT sector. We strive to provide exceptional services that empower businesses to thrive in the digital age. By leveraging the latest technologies and the ingenuity of our team, we aim to become your trusted partner in innovation.",
+    "our_advantage_title": "Our Advantage",
+    "advantage_point1": "Innovative Thinking: We offer creative solutions tailored to your specific needs.",
+    "advantage_point2": "Agility: Our streamlined processes allow us to quickly adapt to changing requirements.",
+    "advantage_point3": "Personalized Service: We give individual attention to each client to ensure your vision is realized.",
+    "advantage_point4": "Competitive Pricing: Our lean structure enables us to offer high-quality services at unbeatable prices.",
+    "advantage_point5": "24/7 Support: Our commitment to you doesn't end with project delivery. We're here for you around the clock.",
+    "how_we_work_title": "How We Work",
+    "how_we_work_step1_title": "Reach Out to Us",
+    "how_we_work_step1_desc": "Contact us anytime—our team is available 24/7.",
+    "how_we_work_step2_title": "Discovery Call",
+    "how_we_work_step2_desc": "We'll schedule a virtual meeting to understand your goals and requirements.",
+    "how_we_work_step3_title": "Tailored Proposal",
+    "how_we_work_step3_desc": "Receive a customized plan with transparent pricing and timelines.",
+    "how_we_work_step4_title": "Seamless Execution",
+    "how_we_work_step4_desc": "Our expert team implements your project, keeping you updated throughout.",
+    "how_we_work_step5_title": "Ongoing Support",
+    "how_we_work_step5_desc": "Post-launch, we provide continuous support to ensure sustained success.",
+    "faq_q1": "How can your newness benefit my project?",
+    "faq_a1": "Our fresh approach means we're highly motivated to impress and excel. We embrace innovative solutions and are flexible to adapt to your unique needs, offering personal service and dedication that drives success.",
+    "faq_q2": "Do you really offer 24/7 support?",
+    "faq_a2": "Absolutely! We understand that questions and issues can arise at any time. Our team is always ready to assist you, minimizing any disruption to your operations.",
+    "faq_q3": "How do you maintain high quality at competitive prices?",
+    "faq_a3": "By working efficiently and leveraging the latest technologies, we reduce overhead without compromising on quality. Our focus is on delivering value to you.",
+    "faq_q4": "What industries do you specialize in?",
+    "faq_a4": "Our diverse team has expertise across various industries, including finance, healthcare, e-commerce, and more. We're adaptable and eager to understand and tackle the unique challenges of your sector."
   }
-  
 }
