--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -25,7 +25,7 @@
     "service_it_consulting_description": "Strategische IT-Lösungen zur Förderung Ihres Geschäfts.",
     "service_web_development_title": "Webentwicklung",
     "service_web_development_description": "Erstellung responsiver und ansprechender Websites, die auf Ihre Bedürfnisse zugeschnitten sind.",
-    "service_it_services_title": "IT-Services",
+    "service_it_services_title": "Zoho Software",
     "service_it_services_description": "Umfassende IT-Unterstützung und Management für reibungslose Abläufe.",
     "projects_title": "Unsere Projekte",
     "project_one_title": "Projekt Eins",
