--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -25,7 +25,7 @@
     "service_it_consulting_description": "Strategic IT solutions to drive your business.",
     "service_web_development_title": "Web Development",
     "service_web_development_description": "Creating responsive and engaging websites tailored to your needs.",
-    "service_it_services_title": "IT Services",
+    "service_it_services_title": "Zoho Software",
     "service_it_services_description": "Comprehensive IT support and management for seamless operations.",
     "projects_title": "Our Projects",
     "project_one_title": "Project One",
